--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^4.2.1",
+    "dart-sass": "^1.25.0",
+    "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.10.0",
+    "sass-loader": "^9.0.3",
     "style-loader": "^1.2.1",
+    "url-loader": "^4.1.0",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
